# Zata-codes-for-learning

./: .gitignore  example_doc.txt  main.py  pyproject.toml  rag_tutorial.py  readme.md  requirements.txt  test.ipynb  test.md
01-wow-agent/: 1-wow_agent_Introduction.ipynb  readme.md  requirements.txt
01-wow-agent/01Task-openai_using/: 2-Your_frist_agent.ipynb  role_template.yaml
01-wow-agent/01Task_openai_using/: 2-Your_frist_agent.ipynb
01-wow-agent/02Task-llama_index/: 1-Llama_index_create_Agent.ipynb  2-Rag&Web_search_Agent.ipynb  Explanation_Doc.md  llmdb.db
01-wow-agent/03Task/: 01.ipynb
01-wow-agent/03Task-(No_learning_required.)-zigent/: 02.ipynb  03.ipynb  04.ipynb  readme.md
01-wow-agent/04/: 01-metagpt_install.ipynb  02-start_a_example.ipynb  02.ipynb  (+13 more)
02-metaGPT/: 01-quick_start.ipynb  02-introduction.md  03-Getting_Started_with_Agent.ipynb  readme.md  start.py
03-1-Langchian/: requirements.txt
03-2-Langsmith/: README.md  pyproject.toml
03-2-Langsmith/01-langsmith-onboarding/: langsmith_getting_started.py
03-2-Langsmith/02-uselangsmit_without_langchain/: requirements.txt  use_langsmith_without_langchain.ipynb
03-3-Langgraph/: main.py  pyproject.toml  requirements.txt
03-Langchian/: requirements.txt
05-Transformers/: README.md  requirements.txt
09-dockerfile/: .dockerignore  6-1.md  Dockerfile  README.md  docker-compose.yml  main.py
langchain_v1/: .env.example  20251028_create_agent.py  config.py  example_dashscope.py
langgraph_in_action/: .env.example  chapter2.ipynb  chapter7.ipynb
wow-agent/: 2-Your_frist_agent.ipynb  readme.md
(+138 files in other folders)
