[project]
name = "zata-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.24.8",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=1.0.1",
    "langchain-openai>=0.0.5",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]
